--- a/templates/raw_map.html
+++ b/templates/raw_map.html
@@ -50,7 +50,7 @@
 
 <body>
 
-   <div class="folium-map" id="folium_84be1a10b266403ab091ae72cbf5f187" style="width: 100%px; height: 100%px"></div>
+   <div class="folium-map" id="folium_9239dfb704a5405c99d414e82bea318f" style="width: 100%px; height: 100%px"></div>
 
    <script>
 
@@ -94,8 +94,8 @@
       /*
       Creates the map and adds the selected layers
       */
-      var map = L.map('folium_84be1a10b266403ab091ae72cbf5f187', {
-                                       center:[45.5088, -73.5878],
+      var map = L.map('folium_9239dfb704a5405c99d414e82bea318f', {
+                                       center:[43.7, -79.4],
                                        zoom: 12,
                                        maxBounds: bounds,
                                        layers: [base_tile]
@@ -113,84 +113,84 @@
       
 
       
-      var circle_1 = L.circle([45.5115944, -73.6051013], 500, {
+      var circle_1 = L.circle([-33.0118775, 151.5964662], 500, {
                             color: '#000000',
-                            fillColor: '#000000',
+                            fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_1.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>FREE BOOKS on several topics plus FREE BOXES most Wednesday morns</h3>\n                <h4>ATWATER LIBRARY-WED-8:30 to 10:30, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5277828865.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_1.bindPopup("\n                <img src='https://images.craigslist.org/00505_giha8B3JoeN_300x300.jpg' height='auto' width='160px' />\n                <h3>Willow Tree \"Angel of Warmth\" figurine</h3>\n                <h4>Toronto, toronto</h4>\n                <a href='http://toronto.craigslist.ca/tor/zip/5279307708.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_1._popup.options.maxWidth = 300;
       map.addLayer(circle_1)
       
-      var circle_2 = L.circle([45.517872, -73.579880], 490, {
+      var circle_2 = L.circle([43.605082, -79.625343], 490, {
                             color: '#000000',
                             fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_2.bindPopup("\n                <img src='https://images.craigslist.org/00I0I_9EWrkVSmFbb_300x300.jpg' height='auto' width='160px' />\n                <h3>Glass blocks bricks</h3>\n                <h4>montreal, Somewhere</h4>\n                <a href='http://montreal.craigslist.ca/zip/5277734796.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_2.bindPopup("\n                <img src='https://images.craigslist.org/01717_b5oj3GxvnKW_300x300.jpg' height='auto' width='160px' />\n                <h3>Free Pull out Sofa Bed</h3>\n                <h4>toronto, Somewhere</h4>\n                <a href='http://toronto.craigslist.ca/mss/zip/5279238711.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_2._popup.options.maxWidth = 300;
       map.addLayer(circle_2)
       
-      var circle_3 = L.circle([45.485921, -73.568435], 480, {
+      var circle_3 = L.circle([43.662408, -79.366951], 480, {
                             color: '#000000',
                             fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_3.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>25 canvases (for re use)</h3>\n                <h4>Little burgandy, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5277679822.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_3.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>Free Office Furniture</h3>\n                <h4>Cabbagetown, toronto</h4>\n                <a href='http://toronto.craigslist.ca/tor/zip/5279226618.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_3._popup.options.maxWidth = 300;
       map.addLayer(circle_3)
       
-      var circle_4 = L.circle([45.483166, -73.623313], 470, {
+      var circle_4 = L.circle([43.659637, -79.401560], 470, {
                             color: '#000000',
                             fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_4.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>Free Dog Cage</h3>\n                <h4>Snowdon, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5277315044.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_4.bindPopup("\n                <img src='https://images.craigslist.org/00c0c_1jBgYHtKHoN_300x300.jpg' height='auto' width='160px' />\n                <h3>Rear Bench From 1995 VW Eurovan</h3>\n                <h4>toronto, Somewhere</h4>\n                <a href='http://toronto.craigslist.ca/tor/zip/5279118646.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_4._popup.options.maxWidth = 300;
       map.addLayer(circle_4)
       
-      var circle_5 = L.circle([45.4854686, -73.6279802], 460, {
+      var circle_5 = L.circle([43.660090, -79.407658], 460, {
                             color: '#000000',
                             fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_5.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>Free Ping Pong Table</h3>\n                <h4>Snowdon, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5277310981.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_5.bindPopup("\n                <img src='https://images.craigslist.org/00p0p_2fzhjPULDTN_300x300.jpg' height='auto' width='160px' />\n                <h3>free loveseat</h3>\n                <h4>Croft &amp; Ulster, toronto</h4>\n                <a href='http://toronto.craigslist.ca/tor/zip/5279116054.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_5._popup.options.maxWidth = 300;
       map.addLayer(circle_5)
       
-      var circle_6 = L.circle([45.5115944, -73.6051013], 450, {
+      var circle_6 = L.circle([43.6529206, -79.3849008], 450, {
                             color: '#000000',
                             fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_6.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>3 air-conditioners + Stove</h3>\n                <h4>montreal, Somewhere</h4>\n                <a href='http://montreal.craigslist.ca/zip/5271670715.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_6.bindPopup("\n                <img src='https://images.craigslist.org/00j0j_1cLWxULAtkr_300x300.jpg' height='auto' width='160px' />\n                <h3>Free Laundry Sink - Standard White Plastic</h3>\n                <h4>toronto, Somewhere</h4>\n                <a href='http://toronto.craigslist.ca/tor/zip/5279050601.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_6._popup.options.maxWidth = 300;
       map.addLayer(circle_6)
       
-      var circle_7 = L.circle([45.475326, -73.584547], 440, {
+      var circle_7 = L.circle([43.665621, -79.473267], 440, {
                             color: '#000000',
                             fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_7.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>Queen size mattress</h3>\n                <h4>St Henri, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5233093554.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_7.bindPopup("\n                <img src='https://images.craigslist.org/00707_8pEDsM2svgE_300x300.jpg' height='auto' width='160px' />\n                <h3>good wood clean some unused porch pick up</h3>\n                <h4>junction, toronto</h4>\n                <a href='http://toronto.craigslist.ca/tor/zip/5278956294.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_7._popup.options.maxWidth = 300;
       map.addLayer(circle_7)
       
-      var circle_8 = L.circle([45.536958, -73.636299], 430, {
+      var circle_8 = L.circle([43.689205, -79.314225], 430, {
                             color: '#000000',
                             fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_8.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>Free gay magazines</h3>\n                <h4>Villeray, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5263300062.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_8.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>free stuff on porch and lawn 1115 Woodbine ave</h3>\n                <h4>1115 Woodbine ave, toronto</h4>\n                <a href='http://toronto.craigslist.ca/tor/zip/5273511563.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_8._popup.options.maxWidth = 300;
       map.addLayer(circle_8)
       
-      var circle_9 = L.circle([45.478565, -73.556188], 420, {
+      var circle_9 = L.circle([43.660015, -79.385601], 420, {
                             color: '#000000',
                             fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_9.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>Needed bed for my son</h3>\n                <h4>Montre, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5275240441.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_9.bindPopup("\n                <img src='https://images.craigslist.org/00H0H_cvk5Rz3u0aC_300x300.jpg' height='auto' width='160px' />\n                <h3>FREE - Split queen adjustable bed</h3>\n                <h4>Toronto, toronto</h4>\n                <a href='http://toronto.craigslist.ca/tor/zip/5264758678.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_9._popup.options.maxWidth = 300;
       map.addLayer(circle_9)
       
