--- a/templates/map.html
+++ b/templates/map.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %} - {{ location.title() }}{% endblock %}
 {% block content %}
+<link rel="stylesheet" type="text/css" href="/static/css/style.css">
 
 <div id="map">
   {% include 'raw_map.html' %}</div>
