--- a/templates/raw_map.html
+++ b/templates/raw_map.html
@@ -50,7 +50,7 @@
 
 <body>
 
-   <div class="folium-map" id="folium_9239dfb704a5405c99d414e82bea318f" style="width: 100%px; height: 100%px"></div>
+   <div class="folium-map" id="folium_66a9547f475b440b97259f0e4006e7d8" style="width: 100%px; height: 100%px"></div>
 
    <script>
 
@@ -94,8 +94,8 @@
       /*
       Creates the map and adds the selected layers
       */
-      var map = L.map('folium_9239dfb704a5405c99d414e82bea318f', {
-                                       center:[43.7, -79.4],
+      var map = L.map('folium_66a9547f475b440b97259f0e4006e7d8', {
+                                       center:[45.5088, -73.5878],
                                        zoom: 12,
                                        maxBounds: bounds,
                                        layers: [base_tile]
@@ -113,84 +113,84 @@
       
 
       
-      var circle_1 = L.circle([-33.0118775, 151.5964662], 500, {
+      var circle_1 = L.circle([45.521938, -73.595276], 500, {
                             color: '#000000',
                             fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_1.bindPopup("\n                <img src='https://images.craigslist.org/00505_giha8B3JoeN_300x300.jpg' height='auto' width='160px' />\n                <h3>Willow Tree \"Angel of Warmth\" figurine</h3>\n                <h4>Toronto, toronto</h4>\n                <a href='http://toronto.craigslist.ca/tor/zip/5279307708.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_1.bindPopup("\n                <img src='https://images.craigslist.org/00t0t_cwM7XJ5nJKz_300x300.jpg' height='auto' width='160px' />\n                <h3>FREE Panasonic HiFi stereo system</h3>\n                <h4>montreal, Somewhere</h4>\n                <a href='http://montreal.craigslist.ca/zip/5281402300.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_1._popup.options.maxWidth = 300;
       map.addLayer(circle_1)
       
-      var circle_2 = L.circle([43.605082, -79.625343], 490, {
+      var circle_2 = L.circle([45.5115944, -73.6051013], 490, {
                             color: '#000000',
                             fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_2.bindPopup("\n                <img src='https://images.craigslist.org/01717_b5oj3GxvnKW_300x300.jpg' height='auto' width='160px' />\n                <h3>Free Pull out Sofa Bed</h3>\n                <h4>toronto, Somewhere</h4>\n                <a href='http://toronto.craigslist.ca/mss/zip/5279238711.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_2.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>Bio-K, Boost</h3>\n                <h4>Montre, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5280729066.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_2._popup.options.maxWidth = 300;
       map.addLayer(circle_2)
       
-      var circle_3 = L.circle([43.662408, -79.366951], 480, {
+      var circle_3 = L.circle([45.5115944, -73.6051013], 480, {
                             color: '#000000',
                             fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_3.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>Free Office Furniture</h3>\n                <h4>Cabbagetown, toronto</h4>\n                <a href='http://toronto.craigslist.ca/tor/zip/5279226618.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_3.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>3 air-conditioners + Stove</h3>\n                <h4>montreal, Somewhere</h4>\n                <a href='http://montreal.craigslist.ca/zip/5271670715.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_3._popup.options.maxWidth = 300;
       map.addLayer(circle_3)
       
-      var circle_4 = L.circle([43.659637, -79.401560], 470, {
+      var circle_4 = L.circle([45.717530, -73.660820], 470, {
                             color: '#000000',
                             fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_4.bindPopup("\n                <img src='https://images.craigslist.org/00c0c_1jBgYHtKHoN_300x300.jpg' height='auto' width='160px' />\n                <h3>Rear Bench From 1995 VW Eurovan</h3>\n                <h4>toronto, Somewhere</h4>\n                <a href='http://toronto.craigslist.ca/tor/zip/5279118646.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_4.bindPopup("\n                <img src='https://images.craigslist.org/00M0M_gzBd734wQVU_300x300.jpg' height='auto' width='160px' />\n                <h3>FREE: Defective Citizen 27\" LCD Television (does not power on)</h3>\n                <h4>Terrebonne (J6X 2C3, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5279958342.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_4._popup.options.maxWidth = 300;
       map.addLayer(circle_4)
       
-      var circle_5 = L.circle([43.660090, -79.407658], 460, {
+      var circle_5 = L.circle([45.545406, -73.611905], 460, {
                             color: '#000000',
                             fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_5.bindPopup("\n                <img src='https://images.craigslist.org/00p0p_2fzhjPULDTN_300x300.jpg' height='auto' width='160px' />\n                <h3>free loveseat</h3>\n                <h4>Croft &amp; Ulster, toronto</h4>\n                <a href='http://toronto.craigslist.ca/tor/zip/5279116054.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_5.bindPopup("\n                <img src='https://images.craigslist.org/00303_a3O7ZLE8mBl_300x300.jpg' height='auto' width='160px' />\n                <h3>Divan-lit/Sofa bed</h3>\n                <h4>Villeray, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5279289337.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_5._popup.options.maxWidth = 300;
       map.addLayer(circle_5)
       
-      var circle_6 = L.circle([43.6529206, -79.3849008], 450, {
+      var circle_6 = L.circle([45.540383, -73.628998], 450, {
                             color: '#000000',
                             fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_6.bindPopup("\n                <img src='https://images.craigslist.org/00j0j_1cLWxULAtkr_300x300.jpg' height='auto' width='160px' />\n                <h3>Free Laundry Sink - Standard White Plastic</h3>\n                <h4>toronto, Somewhere</h4>\n                <a href='http://toronto.craigslist.ca/tor/zip/5279050601.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_6.bindPopup("\n                <img src='https://images.craigslist.org/00D0D_91FB1Bb6AX_300x300.jpg' height='auto' width='160px' />\n                <h3>Free apartment-sized stove</h3>\n                <h4>Villeray, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5278974225.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_6._popup.options.maxWidth = 300;
       map.addLayer(circle_6)
       
-      var circle_7 = L.circle([43.665621, -79.473267], 440, {
+      var circle_7 = L.circle([45.4839326, -73.8081214], 440, {
                             color: '#000000',
                             fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_7.bindPopup("\n                <img src='https://images.craigslist.org/00707_8pEDsM2svgE_300x300.jpg' height='auto' width='160px' />\n                <h3>good wood clean some unused porch pick up</h3>\n                <h4>junction, toronto</h4>\n                <a href='http://toronto.craigslist.ca/tor/zip/5278956294.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_7.bindPopup("\n                <img src='https://images.craigslist.org/01414_6WCIHvKorvw_300x300.jpg' height='auto' width='160px' />\n                <h3>Videotron illico Explorer 8300HD</h3>\n                <h4>Dollard-des-Ormeaux, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5278775102.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_7._popup.options.maxWidth = 300;
       map.addLayer(circle_7)
       
-      var circle_8 = L.circle([43.689205, -79.314225], 430, {
+      var circle_8 = L.circle([45.417403, -73.908638], 430, {
                             color: '#000000',
                             fillColor: 'white',
                             fillOpacity: 0.2
                             });
-      circle_8.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>free stuff on porch and lawn 1115 Woodbine ave</h3>\n                <h4>1115 Woodbine ave, toronto</h4>\n                <a href='http://toronto.craigslist.ca/tor/zip/5273511563.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_8.bindPopup("\n                <img src='https://images.craigslist.org/00K0K_g6zLM35UuN3_300x300.jpg' height='auto' width='160px' />\n                <h3>BUMPER POOL TABLE 35X55 APPROX</h3>\n                <h4>WESTISLAND, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5278218022.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_8._popup.options.maxWidth = 300;
       map.addLayer(circle_8)
       
-      var circle_9 = L.circle([43.660015, -79.385601], 420, {
+      var circle_9 = L.circle([45.5115944, -73.6051013], 420, {
                             color: '#000000',
-                            fillColor: 'white',
+                            fillColor: '#000000',
                             fillOpacity: 0.2
                             });
-      circle_9.bindPopup("\n                <img src='https://images.craigslist.org/00H0H_cvk5Rz3u0aC_300x300.jpg' height='auto' width='160px' />\n                <h3>FREE - Split queen adjustable bed</h3>\n                <h4>Toronto, toronto</h4>\n                <a href='http://toronto.craigslist.ca/tor/zip/5264758678.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_9.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>FREE BOOKS on several topics plus FREE BOXES most Wednesday morns</h3>\n                <h4>ATWATER LIBRARY-WED-8:30 to 10:30, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5277828865.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_9._popup.options.maxWidth = 300;
       map.addLayer(circle_9)
       
