still style givin trouble

--- a/templates/base.html
+++ b/templates/base.html
@@ -101,7 +101,7 @@
                   <div class="form-group">
                     <input type="text" class="form-control" placeholder="5880 Rue Chambord, Montreal">
                   </div>
-                  <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Current Location</button>
+                  <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Current Location</button>
                 </form>
               </ul>
             </div><!-- /.navbar-collapse -->
