--- a/templates/map.html
+++ b/templates/map.html
@@ -10,12 +10,12 @@
     <div class="col-md-8">
     </div>
     <div class="col-md-4">
-      <div class="panel panel-warning" style='width:100%'>
+      <div class="panel panel-success" style='width:100%'>
         <div class="panel-heading">
           <div class='panel-title text-center' style='padding:5px;'>
-            <h4>Treasures in {{ location.title() }}</h4>
-            <button class='btn btn-warning btn-sm' id='show-l-btn'>Legend</button>
-            <button class='btn btn-danger btn-sm' id='show-r-btn'>Listing</button>
+            Treasures of {{ location.title() }}
+            <button class='btn btn-primary btn-sm' id='show-l-btn'>Legend</button>
+            <button class='btn btn-info btn-sm' id='show-r-btn'>Listing</button>
           </div>
         </div>
         <div id='legend' style='display:none' class="panel-body">
@@ -36,7 +36,7 @@
             <li>treasure.plyp.org/"location"/map | Default 10 items.</li>
             <li>treasure.plyp.org/"location"/map/x | The geocoder may crash around 20 items.</li>
           </ul>
-          <a class="btn btn-danger btn-sm center-block" href="map/15" onclick="loading()">Load 15 Items</a>
+          <a class="btn btn-success btn-sm center-block" href="map/15" onclick="loading()">Load 15 Items</a>
         </div>
         <div id='recent' style='display:none' class='panel-body'>
           <div id='recent-display'>
